
* GITHUB#14014: Filtered disjunctions now get executed via `MaxScoreBulkScorer`.
  (Adrien Grand)

* GITHUB#14023: Make JVM inlining decisions more predictable in our main
  queries. (Adrien Grand)

* GITHUB#14032: Speed up PostingsEnum when positions are requested.
  (Adrien Grand)

* GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)

Bug Fixes
---------------------
* GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
  when they were not sorted by startOffset. (Seunghan Jung)
* GITHUB#13884: Remove broken .toArray from Long/CharObjectHashMap entirely. (Pan Guixin)
* GITHUB#12686: Added support for highlighting IndexOrDocValuesQuery. (Prudhvi Godithi)
* GITHUB#13927: Fix StoredFieldsConsumer finish. (linfn)
* GITHUB#13944: Ensure deterministic order of clauses for `DisjunctionMaxQuery#toString`. (Laurent Jakubina)
* GITHUB#13841: Improve Tessellatorlogic when two holes share the same vertex with the polygon which was failing
  in valid polygons. (Ignacio Vera)
* GITHUB#13990: Added filter to the toString() method of Knn[Float|Byte]VectorQuery
  and DiversifyingChildren[Float|Byte]KnnVectorQuery. (Viswanath Kuchibhotla)
* GITHUB#13819: Prevent flattening of ordered and unordered interval sources (Jim Ferenczi)

Build
---------------------

* Upgrade forbiddenapis to version 3.8.  (Uwe Schindler)

Other
---------------------
* GITHUB#13982: Remove duplicate test code. (Lu Xugang)

======================== Lucene 10.0.1 =======================

Bug Fixes
---------------------

* GITHUB#14008: Counts provided by taxonomy facets in addition to another aggregation are now returned together with
  their corresponding ordinals. (Paul King)

* GITHUB#14027: Make SegmentInfos#readCommit(Directory, String, int) public (Luca Cavanna)

======================= Lucene 10.0.0 =======================

API Changes
---------------------