@@ -105,6 +105,9 @@ Optimizations
 
 * GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)
 
+* GITHUB#14040: Specialized top-level DisjunctionMaxQuery evaluation when the
+  tie break multiplier is 0. (Adrien Grand)
+
 Bug Fixes
 ---------------------
 * GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
